# xiaolian

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  tasks.md
.zed/: settings.json
apps/cli/: README.md  pyproject.toml
apps/cli/app/: main.py
apps/cli/src/: main.py
apps/server/: Dockerfile  README.md  pyproject.toml
apps/server/app/: main.py
apps/server/app/logging/: config.py  middleware.py
apps/server/app/providers/: asr.py  llm.py  tts.py  vad.py
apps/server/app/services/: pipeline.py
apps/server/public/: audio-processor.js  index.html
apps/server/src/: app.py  config.yaml  server.py  services.py
apps/server/src/asr/: fun.py
apps/server/src/providers/asr/: base.py  fun.py
